# medicine_box

./: .clang-format  .gitignore  README.md  format.rb  install.rb  medicine-box.service  medicine_box.service
src/: CMakeLists.txt  gpio.c  gpio.h  main.cpp  qr.c  qr.h  tm1637.cpp  tm1637.h  tm1637.hpp
